--- a/style.css
+++ b/style.css
@@ -1,24 +1,65 @@
-body{
-    margin: 0 auto;
+body {
+    margin: 0;
+    padding: 0;
 }
-.Box{
+
+.Box {
     height: 100px;
-    width: 430px;
-    border: solid;
+    width: 100%;
     background-color: black;
 
 }
-.GameMania{
-    height: 120px;
-    width: 350px;
+
+.GameMania {
+    height: 100px;
+    width: 340px;
     background-image: url(img/file.png);
-    background-size: cover;   
     background-size: 350px 100px;
 }
-.logo{
+
+.logo {
     margin-left: 330px;
     height: 100px;
-    width: 100px; background-image: url(img/logo.png);
-    background-size: cover;   
+    width: 100px;
+    background-image: url(img/logo.png);
     background-size: 100px 100px;
+}
+
+.banner {
+    height: 440px;
+    width: 100%;
+    background-image: url(img/banner.png);
+    background-repeat: no-repeat;
+    background-size: 440px 300px;
+    margin-top: 2px;
+}
+
+.Darkness {
+    height: 300px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.25);
+    position: absolute;
+}
+
+.text_banner {
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    margin-top: 250px;
+    color: white;
+    font-family: keania one;
+}
+
+.container {
+    gap: 20px;
+    margin: 0 auto;
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 200px   );
+}
+
+.quadrado {
+    background-color: red;
+    width: 100px;
+    height: 100px;
 }
