--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .banner {
-    height: 440px;
+    height: 330px;
     width: 100%;
     background-image: url(img/banner.png);
     background-repeat: no-repeat;
@@ -51,15 +51,16 @@ body {
 }
 
 .container {
-    gap: 20px;
-    margin: 0 auto;
+    gap: 30px;
     max-width: 1200px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 200px   );
+    grid-template-columns: repeat(1, 200px );
+    margin-left: 120px;
+
 }
 
 .quadrado {
     background-color: red;
-    width: 100px;
-    height: 100px;
-}
+    width: 200px;
+    height: 200px;
+}   
