--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
     gap: 30px;
     max-width: 1200px;
     display: grid;
-    grid-template-columns: repeat(1, 200px );
+    grid-template-columns: repeat(1, 200px);
     margin-left: 120px;
 
 }
@@ -63,4 +63,10 @@ body {
     background-color: red;
     width: 200px;
     height: 200px;
-}   
+}
+
+.rodape{
+    background-color: #D9D9D9;
+    height: 250px;
+    width: 430px;
+}
