--- a/style.css
+++ b/style.css
@@ -7,22 +7,24 @@ body {
     height: 100px;
     width: 100%;
     background-color: black;
-
 }
 
 .GameMania {
     height: 100px;
-    width: 340px;
+    width: 100%;
     background-image: url(img/file.png);
     background-size: 350px 100px;
+    background-repeat: no-repeat;
 }
 
 .logo {
-    margin-left: 330px;
+    margin-left: auto;
+    margin-right: 30px;
     height: 100px;
     width: 100px;
     background-image: url(img/logo.png);
     background-size: 100px 100px;
+    background-repeat: no-repeat;
 }
 
 .banner {
@@ -30,12 +32,12 @@ body {
     width: 100%;
     background-image: url(img/banner.png);
     background-repeat: no-repeat;
-    background-size: 440px 300px;
+    background-size: cover;
     margin-top: 2px;
 }
 
 .Darkness {
-    height: 300px;
+    height: 330px;
     width: 100%;
     background: rgba(0, 0, 0, 0.25);
     position: absolute;
@@ -47,26 +49,166 @@ body {
     justify-content: center;
     margin-top: 250px;
     color: white;
-    font-family: keania one;
+    font-family: "Keania One", sans-serif;
 }
 
 .container {
     gap: 30px;
     max-width: 1200px;
     display: grid;
-    grid-template-columns: repeat(1, 200px);
-    margin-left: 120px;
-
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
 }
 
 .quadrado {
-    background-color: red;
+    background-image: url(img/-858921379-removebg-preview.png);
     width: 200px;
     height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 0px;
+    margin-top: 10px;
 }
 
-.rodape{
+.rodape {
     background-color: #D9D9D9;
-    height: 250px;
-    width: 430px;
+    height: 150px;
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text_footer {
+    font-family: "Keania One", sans-serif;
+    font-size: 30px;
+}
+
+.logowp {
+    height: 46px;
+    width: 46px;
+    background-image: url(img/whatsapp.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 40px;
+    margin-top: -10px;
+}
+
+.textwp {
+    margin-left: 70px;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .text_banner {
+        font-size: 24px;
+        margin-top: 200px;
+    }
+
+    .rodape {
+        height: 120px;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .text_footer {
+        font-size: 26px;
+    }
+
+    .textwp {
+        margin-left: 0;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 992px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .text_banner {
+        font-size: 20px;
+        margin-top: 180px;
+    }
+
+    .rodape {
+        height: 100px;
+    }
+
+    .text_footer {
+        font-size: 24px;
+    }
+
+    .logowp {
+        margin-left: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .GameMania {
+        background-size: cover;
+    }
+
+    .logo {
+        margin-left: 10px;
+    }
+
+    .container {
+        grid-template-columns: 1fr;
+        padding: 10px;
+    }
+
+    .text_banner {
+        font-size: 18px;
+        margin-top: 150px;
+    }
+
+    .rodape {
+        height: 80px;
+        flex-direction: column;
+    }
+
+    .text_footer {
+        font-size: 22px;
+    }
+
+    .logowp {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+
+    .textwp {
+        flex-direction: column;
+        margin-left: 0;
+        text-align: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .text_banner {
+        font-size: 16px;
+        margin-top: 120px;
+    }
+
+    .text_footer {
+        font-size: 18px;
+    }
+
+    .logowp {
+        margin-top: 0;
+        margin-left: 0;
+    }
+
+    .textwp {
+        font-size: 14px;
+    }
 }
